[package]
name = "mersenne-untwist"
version = "0.1.0"
authors = ["Thalia Archibald"]
edition = "2021"
description = "Reverse implementation of the MT19937 Mersenne Twister pseudorandom number generator"
repository = "https://github.com/thaliaarchi/mersenne-untwist"
license = "BSD-3-Clause"
keywords = ["mt19937", "mersenne-twister", "prng"]
categories = ["algorithms"]

[dependencies]
thiserror = "1.0"
z3 = "0.12"
z3-sys = "0.8"
